Revert EquivalenceClass design to address performance regression and add `BulkOperationAutomaton` for faster successor computation for simple cases.